--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,13 @@ npm-debug.log*
 # Dependencies
 node_modules/
 
-# Environment variables
+# Environment variables - SEGURIDAD CRÍTICA
 .env
 .env.local
 .env.production
+config.js
+secrets.js
+api-keys.txt
 
 # IDE files
 .vscode/
